fix wrap

--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -70,4 +70,5 @@
     padding: 0 1rem 1rem 2rem;
     height: auto;
     opacity: 1;
+    word-wrap: break-word;
 }
